# dusklight-asset-tools

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  mod.json
.github/workflows/: build.yml
cmake/: FetchDusklight.cmake
src/: main.cpp  mod.cpp
src/lib/: OSUtf.c  arc.cpp  arc.hpp  assets.hpp  assets_main.cpp  assets_main.hpp  assets_pack.cpp  assets_pack.hpp  assets_unpack.cpp  assets_unpack.hpp  ast.cpp  ast.hpp  bmd.cpp  bmd.hpp  iso.cpp  iso.hpp  sjis.hpp  timg.cpp  timg.hpp  yaz0_compress.cpp  yaz0_compress.hpp
tools/: merge_mod.py
